2007-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1257/bsps
	* irq/irq.c: Code outside of cpukit should use the public API for
	rtems_interrupt_disable/rtems_interrupt_enable. By bypassing the
	public API and directly accessing _CPU_ISR_Disable and
	_CPU_ISR_Enable, they were bypassing the compiler memory barrier
	directive which could lead to problems. This patch also changes the
	type of the variable passed into these routines and addresses minor
	style issues.

2007-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* irq/irq.h: Reformat -- make things line up.

2007-08-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* console/console.c: Add missing semi-colon.

2007-08-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, README.IceCube, preinstall.am, include/bsp.h,
	vectors/vectors.S: Rename EP5200 to IceCube since that is the
	nickname for the Freescale evaluation board it is based upon. BSP was
	tested on a Freescale MPC5200LITE.

2007-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ide/pcmcia_ide.c: Added prototype of mpc5200_pcmciaide_dma_blockop to
	eliminate warning.

2007-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: Add shared ShowBATS().
	* startup/cpuinit.c: Split out BAT initialization into subroutine
	that is defined based upon conditionals set.  More critically
	added code to detect and correct for a buggy U-Boot found on
	some Freescale LITE5200B boards which report Flash memory to
	be for 32MB at 0xFF000000 instead of 0xFE000000.  If we use
	the reported information, the system gives an exception just
	after the BAT is programmed.
	* vectors/vectors_init.c: Turn off message unless verbose is on.

2007-07-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, vectors/vectors_init.c: Print stack trace on exception.

2007-07-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/linkcmds.brs5l: Add .jcr section.

2007-07-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* README.IceCube: New file.
